panning now works for the viewer.  Cleaned up some z-index issues and css issues.

--- a/Hollow Knight FSM Viewer 2/main.css
+++ b/Hollow Knight FSM Viewer 2/main.css
@@ -3,7 +3,19 @@ body{
     background: #272822;
     font-family: Helvetica;
 }
-svg { position:fixed; top:100px; left:0; height:100%; width:100% }
+/*
+svg { 
+    position:fixed; 
+    top:100px; 
+    left:0; 
+    height:100%; 
+    width:100%
+}
+    */
+
+#viewer {
+    z-index: 0;
+}
 .fsmBox{
     display: flex;
     justify-content:center;
@@ -12,30 +24,31 @@ svg { position:fixed; top:100px; left:0; height:100%; width:100% }
     flex-direction:column;
     position: absolute;
     background: #49483E;
+    
 }
 
 #info_head{
     background: #cdcdcd;
     color: #111;
-    font-size: 20;
+    font-size: 20px;
     font-weight: bold;  
 }
 
 #info_actions_title, #info_transitions_title{
     background: #ababab;
     color: #222;
-    font-size: 16;
+    font-size: 16px;
     font-weight: bold;
 }
 
 #info{
-    z-index: 999;
+    z-index: 75;
     position: fixed;
     top: 0px;
     right: 0px;
     width: 450px;
     background: #111;
-    font-size: 12;
+    font-size: 12px;
 }
 
 .bool{
@@ -62,3 +75,13 @@ svg { position:fixed; top:100px; left:0; height:100%; width:100% }
     overflow-x: hidden;
     z-index: 100;
   }
+
+#fsmFiles {
+    z-index: 50;
+    top: 0px;
+    left: 0px;
+    position: absolute;
+    background-color: #272822;
+    padding: 10px;
+    width: 100%;
+}
